[tool.poetry]
name = "cards-backend"
version = "0.1.0"
description = ""
authors = ["nikrenxd <nikrenc1101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg = {extras = ["binary"], version = "^3.2.2"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
